open links in new window

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. This is a small introductory paragraph about this map. We should keep it fairly small and terse to give ample space to the map.
           </p>
           <p>
-            To learn more visit <a href='http://www.cvconservationstrategy.org'>www.cvconservationstrategy.org</a>
+            To learn more visit <a target='_blank' href='http://www.cvconservationstrategy.org'>www.cvconservationstrategy.org</a>
           </p>
         </div>
         <div id='protected' class='legend-line'>
@@ -50,7 +50,11 @@
             ‘Forest Loss’ is defined as a stand-replacement disturbance, or a change from a forest to non-forest state.
           </p>
           <p>Global Forest Change published by Hansen, Potapov, Moore, Hancher et al. </p>
-          <p><a href='http://earthenginepartners.appspot.com/science-2013-global-forest'>http://earthenginepartners.appspot.com/science-2013-global-forest</a></p>
+          <p>
+            <a target='_blank' href='http://earthenginepartners.appspot.com/science-2013-global-forest'>
+              http://earthenginepartners.appspot.com/science-2013-global-forest
+            </a>
+          </p>
           </p>
         </div>
         <div id='fc-loss' class='legend-line'>
