--- a/sendtemplate.html
+++ b/sendtemplate.html
@@ -141,8 +141,7 @@ Our sensitive ecosystems and forests need stronger protection if we hope to keep
 
 Thank you,
 
-<your-name>
-      </textarea></p>
+<your-name></textarea></p>
     </div>
 
     <p><input type="submit" value="Send Email"></p>
