--- a/sendtemplate.html
+++ b/sendtemplate.html
@@ -20,7 +20,7 @@
     }
 
     var loc = 'region';
-    var locstr = $locname['region'];
+    var locstr = locname[loc];
     var signatureline = '<your-name-and-address>';
     var name = "<your-name>";
     var edited = false;
