--- a/sendtemplate.html
+++ b/sendtemplate.html
@@ -62,10 +62,10 @@
           signatureline = replaceText;
 
           // Now do the name
-          //var replaceTextname = $('input[name=name]').val();
+          var replaceTextname = $('input[name=name]').val();
 
-          //letter.val(letter.val().replace(name, replaceTextname));
-          //name = replaceTextname;
+          letter.val(letter.val().replace(name, replaceTextname));
+          name = replaceTextname;
         }
       });
 
