--- a/sendtemplate.html
+++ b/sendtemplate.html
@@ -155,9 +155,7 @@
       <p><textarea name="letter" rows="30" cols="100">
 Dear Area Directors of the Regional District,
 
-My name is <your-name>, and I live in the Comox Valley Regional District. It is with great concern that I write you in regards to the status and protection of sensitive ecosystems in the Comox Valley. A sensitive ecosystem is an ecologically fragile ecosystem that is home to a variety of at-risk species and biological communities. Some examples of sensitive ecosystems in the Comox Valley include terrestrial herbaceous meadows, unique older forests, wetlands and riparian areas. 
-
-According to the Comox Valley Conservation Strategy, 30% of sensitive ecosystems within the Comox Valley have been lost within the past 10 years. Of those remaining, 63% have been degraded due to development, logging, or other destructive activities. 
+My name is <your-name>, and I live in the Comox Valley Regional District. It is with great concern that I write to you about the protection of sensitive ecosystems in the Comox Valley. According to the Comox Valley Conservation Strategy, 30% of sensitive ecosystems within the Comox Valley have been lost within the past 10 years. Of those remaining, 63% have been degraded due to development, logging, or other destructive activities. 
 
 In the same timeframe, the Comox Valley has seen a full 10% reduction in forest cover due to industrial scale logging and other activities. 
 
