--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
         <input type="checkbox" id="fc-check"/>
         <label for="fc-check">View forest change 2000 - 2014</label>
       </div>
+    </div>
 
+    <div id='sendmail'>
+      <iframe src="http://ubuntu/cvcs-map/sendmail.php" scrolling="no"></iframe>
     </div>
     <script>
       L.mapbox.accessToken = 'pk.eyJ1IjoicGhheWVzIiwiYSI6InNHMlkzQUkifQ.C9wmsbr-8tAtViMNb1wEcA';
