Using killa for sending mail

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <div id='sendmail'>
       <img src="close.png" id='sendmail-close'/>
-      <iframe src="http://ubuntu/cvcs-map/sendmail.php" scrolling="no"></iframe>
+      <iframe src="http://50.7.48.242/phayes/cvcs-map/sendmail.php" scrolling="no"></iframe>
     </div>
     <div id='sendmail-select'>
       <p>Seen enough?</p>
