adding fb preview image

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </style>
   </head>
   <body>
+    <img src="fb-preview.png" id="fb-preview-image" />
     <div id='map'></div>
     <div id='legend'>
       <h4 class='legend-desc'>Comox Valley Sensitive Ecosystem Inventory</h4>
