--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <title>Comox Valley Sensitive Ecosystem Map</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <meta property="og:image" content="fb-preview.png" />
-    <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
-    <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.2/mapbox.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.2/mapbox.css' rel='stylesheet' />
-    <script src="http://maps.google.com/maps/api/js?v=3.2&amp;sensor=false"></script>
-    <script src="http://matchingnotes.com/javascripts/leaflet-google.js"></script>
+    <script src='//code.jquery.com/jquery-2.1.1.min.js'></script>
+    <script src='//api.tiles.mapbox.com/mapbox.js/v2.1.2/mapbox.js'></script>
+    <link href='//api.tiles.mapbox.com/mapbox.js/v2.1.2/mapbox.css' rel='stylesheet' />
+    <script src="//maps.google.com/maps/api/js?v=3.2&amp;sensor=false"></script>
     <link href='cvcs-map.css' rel='stylesheet' />
     <style>
       body { margin:0; padding:0; }
@@ -114,7 +113,7 @@
       var pro_control = L.mapbox.gridControl(pro_grid).addTo(map);
 
       // Forest Loss map
-      var fl_layer = L.tileLayer('http://earthengine.google.org/static/hansen_2014/loss_tree_gain/{z}/{x}/{y}.png');
+      var fl_layer = L.tileLayer('https://earthengine.google.org/static/hansen_2014/loss_tree_gain/{z}/{x}/{y}.png');
 
       // Scale bar
       L.control.scale().addTo(map);
