--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <meta property="og:image" content="fb-preview.png" />
     <script src='//code.jquery.com/jquery-1.11.1.min.js'></script>
-    <script src='//api.tiles.mapbox.com/mapbox.js/v2.1.2/mapbox.js'></script>
-    <link href='//api.tiles.mapbox.com/mapbox.js/v2.1.2/mapbox.css' rel='stylesheet' />
+    <script src='//api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js'></script>
+    <link href='//api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
     <script src="//maps.google.com/maps/api/js?v=3.2&amp;sensor=false"></script>
     <script src="cvcs-map.js"></script>
     <link href='cvcs-map.css' rel='stylesheet' />
+    <!--[if IE 8]>
+    <style>
+      #legend {
+        background-color: white;
+      }
+    </style>
+    <![endif]-->
     <style>
       body { margin:0; padding:0; }
       #map { position:absolute; top:0; bottom:0; width:100%; }
