--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       #legend {
         background-color: white;
       }
+      #sendmail, #sendmail iframe {
+        top: 10px;
+      }
     </style>
     <![endif]-->
     <style>
