--- a/sendtemplate.html
+++ b/sendtemplate.html
@@ -1,6 +1,16 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="sendmail.css">
+  <!--[if IE 8]>
+  <style>
+    #legend {
+      background-color: white;
+    }
+    textarea {
+      height: 300px;
+    }
+  </style>
+  <![endif]-->
   <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script>
     var locationmap = {
