Fixing scheme, add to field

--- a/sendtemplate.html
+++ b/sendtemplate.html
@@ -163,6 +163,11 @@
     </div>
 
     <div>
+      <label for="to">To</label>
+      <input type="text" name="to" disabled="disabled">
+    </div>
+
+    <div>
       <p><textarea name="letter" rows="20" cols="100">
 Dear Area Directors of the Regional District,
 
