--- a/sendtemplate.html
+++ b/sendtemplate.html
@@ -174,7 +174,7 @@
 <body>
 
 <div id="helptext">
-  <h4>Take action and contact your elected representatives</h4>
+  <h4>Contact your elected representatives</h4>
   <p>Please use this form to send an email to your local elected representatives and ask them to protect sensitive ecosystems in the Comox Valley.  <p>
 
   <p>We've provided a default letter that you can send as-is or embellish to make it your own. Or you can write an email using your own words entirely. It's important to ensure that local politicians know that their consituents are concerned about ecosystem degradation in the Comox Valley and want them to take action.</p>
