--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <div id='lost-sei' class='legend-line'>
           <span id='lost-sei-colourball' class='colourball'>&#9679;</span><span class='legend-text'>Sensitive Ecosystem - Lost</span>
         </div>
+        <div id='boundary' class='legend-line'>
+          <span id='boundary-colourball' class='colourball'>&#9679;</span><span class='legend-text'>Project Area Boundary</span>
+        </div>
       </div>
 
       <div id='fc-legend'>
@@ -73,6 +76,9 @@
         <div id='fc-both' class='legend-line'>
           <span id='fc-extent-colourball' class='colourball'>&#9679;</span><span class='legend-text'>Forest - No Change</span>
         </div>
+        <div id='fc-none' class='legend-line'>
+          <span id='fc-none-colourball' class='colourball'>&#9679;</span><span class='legend-text'>No Forest</span>
+        </div>
       </div>
 
       <div id='fc-switcher'>
@@ -87,9 +93,9 @@
 
       <p>The Sensitive Ecosystems of the lowland Comox Valley have been heavily impacted by human activities. </p>
 
-      <p>This map provides updated information on the Sensitive Ecosystems that were first mapped in the early 1990s by the provincial and federal governments. Human impacts have reduced the amount of intact, undisturbed sensitive ecosystems from 18% to only 5% of the lowland Comox Valley land base since 1992. Hover over a sensitive ecosystem on the map to see what type of ecosystem it is, and what state it is in, based on the 2012 disturbance assessment.</p>
+      <p>Lowland Comox Valley Sensitive Ecosystems were first mapped in the early 1990s by the provincial and federal governments. Since then, human impacts have reduced the amount of intact, undisturbed sensitive ecosystems from 18 to only 5 percent of the lowland Comox Valley area. Hover over a Sensitive Ecosystem on the map to see what type of ecosystem it is, and what state it is in, based on the Comox Valley Conservation Strategy Community Partnership’s 2012 disturbance assessment.</p>
 
-      <p>Sensitive Ecosystems need to be protected and restored. Only 11% of these ecosystems are currently protected. Hover over the green areas on the map to discover which of the Sensitive Ecosystems are protected as park or conservancy land. </p>
+      <p>Sensitive Ecosystems need to be protected and restored. Less than 4 percent of the lowland Comox Valley is protected. Hover over the green areas on the map to discover which of the Sensitive Ecosystems are protected as park or conservancy land. </p>
 
       <p>After viewing the map we invite you to take action by contacting your local elected representative and asking them to protect sensitive ecosystems</p>
 
@@ -101,8 +107,7 @@
       <iframe src="http://50.7.48.242/phayes/cvcs-map/sendmail.php" scrolling="no"></iframe>
     </div>
     <div id='sendmail-select'>
-      <p>Seen enough?</p>
-      <h4>Contact your elected representatives about protecting Sensitive Ecosystems</h4>
+      <h3>Contact your elected representatives about protecting Sensitive Ecosystems</h3>
     </div>
   </body>
 </html>
