Fixing iframe URL

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <div id='sendmail'>
       <img src="close.png" id='sendmail-close'/>
-      <iframe src="http://50.7.48.242/phayes/cvcs-map/sendmail.php" scrolling="no"></iframe>
+      <iframe src="http://comoxvalleyecosystems.com/sendmail.php" scrolling="no"></iframe>
     </div>
     <div id='sendmail-select'>
       <h3>Contact your elected representatives about protecting Sensitive Ecosystems</h3>
